# notify

./: .cirrus.yml  .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  deny.toml  renovate.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
examples/: Cargo.toml  async_monitor.rs  debouncer_full.rs  debouncer_mini.rs  debouncer_mini_custom.rs  monitor_debounced.rs  monitor_raw.rs  poll_sysfs.rs  pollwatcher_manual.rs  pollwatcher_scan.rs  watcher_kind.rs
examples/hot_reload_tide/: Cargo.toml
examples/hot_reload_tide/src/: main.rs
file-id/: CHANGELOG.md  Cargo.toml
file-id/src/: lib.rs
file-id/tests/: integration.rs
notify/: CHANGELOG.md  Cargo.toml
notify-debouncer-full/: CHANGELOG.md  Cargo.toml
notify-debouncer-full/src/: cache.rs  file_id_map.rs  lib.rs  testing.rs  time.rs
notify-debouncer-mini/: CHANGELOG.md  Cargo.toml
notify-debouncer-mini/src/: lib.rs
notify-types/: CHANGELOG.md  Cargo.toml
notify-types/src/: event.rs  lib.rs
notify/benches/: paths_mut_bench.rs
notify/src/: bimap.rs  config.rs  consolidating_path_trie.rs  error.rs  fsevent.rs  inotify.rs  kqueue.rs  lib.rs  null.rs  poll.rs  test.rs  windows.rs
