[package]
name = "rolldown-notify-debouncer-full"
version = "0.6.3"
description = "notify event debouncer optimized for ease of use"
documentation = "https://docs.rs/notify-debouncer-full"
authors = ["Daniel Faust <hessijames@gmail.com>"]
keywords = ["events", "filesystem", "notify", "watch"]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name  = "notify_debouncer_full"

[features]
default = ["macos_fsevent"]
serde = ["rolldown-notify-types/serde"]
web-time = ["rolldown-notify-types/web-time"]
crossbeam-channel = ["dep:crossbeam-channel", "rolldown-notify/crossbeam-channel"]
flume = ["dep:flume", "rolldown-notify/flume"]
macos_fsevent = ["rolldown-notify/macos_fsevent"]
macos_kqueue = ["rolldown-notify/macos_kqueue"]
serialization-compat-6 = ["rolldown-notify/serialization-compat-6"]

[dependencies]
rolldown-notify.workspace = true
rolldown-notify-types.workspace = true
crossbeam-channel = { workspace = true, optional = true }
flume = { workspace = true, optional = true }
rolldown-file-id.workspace = true
walkdir.workspace = true
log.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
serde.workspace = true
deser-hjson.workspace = true
tempfile.workspace = true
