[package]
name = "rolldown-notify-debouncer-mini"
version = "0.7.1"
description = "notify mini debouncer for events"
documentation = "https://docs.rs/notify-debouncer-mini"
authors = ["Aron Heinecke <Ox0p54r36@t-online.de>"]
keywords = ["events", "filesystem", "notify", "watch"]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name  = "notify_debouncer_mini"

[features]
default = ["macos_fsevent"]
serde = ["rolldown-notify-types/serde"]
crossbeam-channel = ["dep:crossbeam-channel", "rolldown-notify/crossbeam-channel"]
flume = ["dep:flume", "rolldown-notify/flume"]
macos_fsevent = ["rolldown-notify/macos_fsevent"]
macos_kqueue = ["rolldown-notify/macos_kqueue"]
serialization-compat-6 = ["rolldown-notify/serialization-compat-6"]

[dependencies]
rolldown-notify.workspace = true
rolldown-notify-types.workspace = true
crossbeam-channel = { workspace = true, optional = true }
flume = { workspace = true, optional = true }
log.workspace = true
tempfile.workspace = true
