[package]
name = "rolldown-notify-types"
version = "2.0.1"
description = "Types used by the notify crate"
documentation = "https://docs.rs/notify-types"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["events", "filesystem", "notify", "watch"]
categories = ["filesystem"]
authors = ["Daniel Faust <hessijames@gmail.com>"]
rust-version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name  = "notify_types"

[features]
serialization-compat-6 = []

[lints]
workspace = true

[dependencies]
serde = { workspace = true, optional = true }
web-time = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
insta.workspace = true
rstest.workspace = true
